<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16dp"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction" />

    <RadioGroup
        android:id="@+id/rg_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7" />

        <RadioButton
            android:id="@+id/rb_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/rb_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_12" />

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/choose" />


</LinearLayout>