<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_activity" />

    <Button
        android:id="@+id/btn_move_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_move_activity"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/pindah_dengan_data" />

    <Button
        android:id="@+id/btn_move_with_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_move_with_data"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/pindah_dengan_objek" />

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_move_with_object"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/panggilan" />

    <Button
        android:id="@+id/btn_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_dial_number"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/kuis" />

    <TextView
        android:id="@+id/tv_result_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_quiz"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="@dimen/_30sp" />


</RelativeLayout>